--- a/ProjectX/Base.lproj/Main.storyboard
+++ b/ProjectX/Base.lproj/Main.storyboard
@@ -51,7 +51,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Naj-PW-TJd" customClass="MFTextField">
-                                <rect key="frame" x="55" y="264.5" width="273" height="33"/>
+                                <rect key="frame" x="55" y="270.5" width="273" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="273" id="QfB-ca-niZ"/>
                                 </constraints>
@@ -59,8 +59,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8BG-Lq-SGX" customClass="MFTextField">
-                           
+                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8BG-Lq-SGX" customClass="MFTextField">
                                 <rect key="frame" x="55" y="305.5" width="273" height="33"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="273" id="Tb3-p6-hsI"/>
@@ -1395,9 +1394,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="mTM-H1-Dc7">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="mTM-H1-Dc7">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ZvW-54-aON">
                                     <size key="itemSize" width="87" height="44"/>
@@ -1432,43 +1430,72 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="356"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="blueGradient" translatesAutoresizingMaskIntoConstraints="NO" id="gwy-bI-TZd">
-                                            <rect key="frame" x="0.0" y="-115" width="375" height="428"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="blueGradient" translatesAutoresizingMaskIntoConstraints="NO" id="gwy-bI-TZd">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="313"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" relation="lessThanOrEqual" constant="313" id="9cL-s4-EmU"/>
+                                            </constraints>
                                         </imageView>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pix-av-Cx4">
-                                            <rect key="frame" x="137" y="74" width="100" height="100"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pix-av-Cx4">
+                                            <rect key="frame" x="137.5" y="58" width="100" height="100"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="100" id="5kA-Av-Py4"/>
+                                                <constraint firstAttribute="width" constant="100" id="fhY-wy-bff"/>
+                                            </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bC9-UX-zST">
-                                            <rect key="frame" x="80" y="168" width="214" height="40"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bC9-UX-zST">
+                                            <rect key="frame" x="16" y="162" width="343" height="20.5"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="@" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o6L-wR-HZT">
-                                            <rect key="frame" x="93" y="202" width="188" height="30"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o6L-wR-HZT">
+                                            <rect key="frame" x="16" y="187.5" width="343" height="20"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Interests" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MTp-Kr-3Nk">
-                                            <rect key="frame" x="122" y="321" width="131" height="27"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Interests" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MTp-Kr-3Nk">
+                                            <rect key="frame" x="150" y="321" width="75" height="24"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Bio" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yMJ-f8-k6j">
-                                            <rect key="frame" x="22" y="230" width="331" height="59"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bio" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yMJ-f8-k6j">
+                                            <rect key="frame" x="16" y="215.5" width="343" height="20.5"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailingMargin" secondItem="yMJ-f8-k6j" secondAttribute="trailing" constant="8" id="1fS-cu-mRX"/>
+                                        <constraint firstItem="gwy-bI-TZd" firstAttribute="top" secondItem="LbL-sJ-0qo" secondAttribute="top" id="32G-nR-5lT"/>
+                                        <constraint firstItem="pix-av-Cx4" firstAttribute="centerX" secondItem="LbL-sJ-0qo" secondAttribute="centerX" id="5gI-2q-7HO"/>
+                                        <constraint firstItem="yMJ-f8-k6j" firstAttribute="leading" secondItem="LbL-sJ-0qo" secondAttribute="leadingMargin" constant="8" id="7Dl-dK-DUL"/>
+                                        <constraint firstItem="bC9-UX-zST" firstAttribute="top" secondItem="pix-av-Cx4" secondAttribute="bottom" constant="4" id="8TI-ag-DRC"/>
+                                        <constraint firstItem="MTp-Kr-3Nk" firstAttribute="centerX" secondItem="LbL-sJ-0qo" secondAttribute="centerX" id="8an-Oe-dnD"/>
+                                        <constraint firstItem="yMJ-f8-k6j" firstAttribute="centerX" secondItem="LbL-sJ-0qo" secondAttribute="centerX" id="9Hk-3k-B6i"/>
+                                        <constraint firstItem="gwy-bI-TZd" firstAttribute="leading" secondItem="LbL-sJ-0qo" secondAttribute="leading" id="Bj3-1v-5JK"/>
+                                        <constraint firstItem="o6L-wR-HZT" firstAttribute="centerX" secondItem="gwy-bI-TZd" secondAttribute="centerX" id="FmP-AA-MIZ"/>
+                                        <constraint firstItem="yMJ-f8-k6j" firstAttribute="centerX" secondItem="gwy-bI-TZd" secondAttribute="centerX" id="Gc7-iw-Dpv"/>
+                                        <constraint firstAttribute="trailing" secondItem="gwy-bI-TZd" secondAttribute="trailing" id="HWi-gW-46d"/>
+                                        <constraint firstItem="bC9-UX-zST" firstAttribute="leading" secondItem="LbL-sJ-0qo" secondAttribute="leadingMargin" constant="8" id="LTi-qz-Rob"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="bC9-UX-zST" secondAttribute="trailing" constant="8" id="MqM-Sx-TBr"/>
+                                        <constraint firstItem="pix-av-Cx4" firstAttribute="centerX" secondItem="gwy-bI-TZd" secondAttribute="centerX" id="MuO-hE-mVv"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="o6L-wR-HZT" secondAttribute="trailing" constant="8" id="NiR-oY-MMs"/>
+                                        <constraint firstItem="o6L-wR-HZT" firstAttribute="leading" secondItem="LbL-sJ-0qo" secondAttribute="leadingMargin" constant="8" id="QIN-fO-f9Q"/>
+                                        <constraint firstItem="gwy-bI-TZd" firstAttribute="centerX" secondItem="LbL-sJ-0qo" secondAttribute="centerX" id="R6k-ld-rip"/>
+                                        <constraint firstItem="o6L-wR-HZT" firstAttribute="top" secondItem="bC9-UX-zST" secondAttribute="bottom" constant="5" id="XqE-vN-y6v"/>
+                                        <constraint firstItem="pix-av-Cx4" firstAttribute="top" secondItem="LbL-sJ-0qo" secondAttribute="topMargin" constant="50" id="avH-pI-7Hr"/>
+                                        <constraint firstItem="bC9-UX-zST" firstAttribute="centerX" secondItem="gwy-bI-TZd" secondAttribute="centerX" id="axb-2Y-fEs"/>
+                                        <constraint firstItem="yMJ-f8-k6j" firstAttribute="top" secondItem="o6L-wR-HZT" secondAttribute="bottom" constant="8" id="lV4-7W-zFw"/>
+                                        <constraint firstItem="MTp-Kr-3Nk" firstAttribute="top" secondItem="gwy-bI-TZd" secondAttribute="bottom" constant="8" id="oAd-5p-2pk"/>
+                                        <constraint firstItem="pix-av-Cx4" firstAttribute="centerX" secondItem="LbL-sJ-0qo" secondAttribute="centerX" id="pKK-h9-2qg"/>
+                                        <constraint firstItem="o6L-wR-HZT" firstAttribute="centerX" secondItem="LbL-sJ-0qo" secondAttribute="centerX" id="t42-On-AQW"/>
+                                        <constraint firstItem="bC9-UX-zST" firstAttribute="centerX" secondItem="LbL-sJ-0qo" secondAttribute="centerX" id="tkQ-Mk-rKL"/>
+                                        <constraint firstItem="gwy-bI-TZd" firstAttribute="top" secondItem="LbL-sJ-0qo" secondAttribute="top" id="ymx-3y-tre"/>
+                                    </constraints>
                                     <connections>
                                         <outlet property="bio" destination="yMJ-f8-k6j" id="9O4-e8-Eal"/>
                                         <outlet property="name" destination="bC9-UX-zST" id="LgA-Ce-NBB"/>
@@ -1479,6 +1506,12 @@
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="mTM-H1-Dc7" firstAttribute="top" secondItem="mg8-3Y-ewV" secondAttribute="top" id="2yo-4T-9sN"/>
+                            <constraint firstItem="mTM-H1-Dc7" firstAttribute="bottom" secondItem="V1W-q6-egF" secondAttribute="bottom" id="43t-UO-f3g"/>
+                            <constraint firstItem="mTM-H1-Dc7" firstAttribute="leading" secondItem="V1W-q6-egF" secondAttribute="leading" id="cw5-SF-xLP"/>
+                            <constraint firstItem="mTM-H1-Dc7" firstAttribute="trailing" secondItem="V1W-q6-egF" secondAttribute="trailing" id="uEO-lW-QLM"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="V1W-q6-egF"/>
                     </view>
                     <navigationItem key="navigationItem" title="Profile" id="HfX-QS-zoY">
